Added a myscraper module with a scraper class that scrapes urls
 - Class accepts targets and a basic matcher enum
 - class is started and it just prints any matches
 - will need ot be asyn in the future and introduce a way to compare against old changes.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,10 @@
 
 
+-- 08-29-2022
+ [2] - Add unit tests for the myscraper module
+ [3] - Add a notifying mechanism for matches
+ [4] - Add a way to compare to previously scraped sites
+ [5] - Figure out how to upload this github
 -- 08-28-2022
  [1] Figure out if there's a better way to scrape the HTML.
+
